tests/elab/errors/unbound_name.snapshot
exit status: 1

stdout = """
def a: #error = #error;
types of expressions:
8..9 = #error
"""

stderr = """
error: unbound name `b`
  ┌─ tests/elab/errors/unbound_name.pion:1:9
  │
1 │ def a = b;
  │         ^

aborting due to 1 previous error
"""
